[project]
name = "bluestash"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
    "xxhash>=3.5.0",
]

[project.scripts]
bluestash = "bluestash.cli:app"
